# lzlib

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  cabal.project  cabal.project.local  circle.yml  dhall-ci.dhall  haskell-ci.dhall  haskell.dhall  hlint-ci.dhall  lzlib.cabal  stack.yaml  yaml-ci.dhall
.github/workflows/: dhall.yml  haskell.yml  hlint.yml  yamllint.yml
bash/: bench  cross  display  setup
bench/: Bench.hs
cbits/: decoder.c  decoder.h  encoder.c  encoder.h  encoder_base.c  encoder_base.h  fast_encoder.c  fast_encoder.h  lzip.h  lzlib.c  lzlib.h
mem/: Mem.hs
src/Codec/: Lzip.chs  Lzip.hs
src/Codec/Lzip/: Pure.hs  Raw.chs
test/: Golden.hs  Spec.hs  Z.hs
zsh/: regen
