name:                lzlib
version:             0.1.0.0
synopsis: lzlib bindings
description: Lzlib bindings via [c2hs](http://hackage.haskell.org/package/c2hs).
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2019 Vanessa McHale
category:            Codec, Compression
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
extra-source-files:  stack.yaml
cabal-version:       1.18

library
  hs-source-dirs:      src
  exposed-modules:     Codec.Lzip
  build-depends:       base >= 4.3 && < 5
  build-tool-depends:  c2hs:c2hs
  default-language:    Haskell2010
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Widentities
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  ghc-options:         -Wall
  extra-libraries:     lz

source-repository head
  type:     git
  location: https://github.com/vmchale/lzlib
