cabal-version:      1.18
name:               lzlib
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
copyright:          Copyright: (c) 2019 Vanessa McHale
maintainer:         vamchale@gmail.com
author:             Vanessa McHale
synopsis:           lzlib bindings
description:
    Lzlib bindings via [c2hs](http://hackage.haskell.org/package/c2hs).

category:           Codec, Compression
build-type:         Simple
extra-source-files: stack.yaml
extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/vmchale/lzlib

library
    exposed-modules:    Codec.Lzip
    build-tool-depends: c2hs:c2hs -any
    hs-source-dirs:     src
    default-language:   Haskell2010
    extra-libraries:    lz
    ghc-options:        -Wall
    build-depends:      base >=4.3 && <5

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
